ignore target folder and log files from source code control, also add log file for dev

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,14 @@ spring:
 ---
 spring:
   profiles: dev
-datasource:
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
+    hibernate: DEBUG
+
+  file: mylogfile.log
 
 ---
 spring:
